--- a/devWebI/aula/flexbox/criando-bandeiras/style.css
+++ b/devWebI/aula/flexbox/criando-bandeiras/style.css
@@ -3,36 +3,65 @@
 }
   
 body{
-      margin: 0;
+    margin: 0;
 }
 
 .container{
    display: flex;
-
+   width: 100%;
+   height: 100vh;
+   /* width: 900px;
+   height: 400px; */
 }
 
-.item{
+.container-virado {
     display: flex;
-    flex-direction: column;
-    width: 900px;
-    height: 400px;
-    border: 1px solid black;
+    width: 100vw;
+    height: 100%;
 }
 
-.faixa{
-    display: flex;
-    width: 100%;
-    height: 33.33%;
+/* bandeira da frança */
+.franca{
+    width: 33.333%;
+    height: 100%;
 }
 
-.bandeira-franca-azul{
-    background-color: blue;
+.franca.azul{
+    background-color: #0055A4;
+}
+.franca.branco{
+    background-color: #FFFFFF;
+}
+.franca.vermelho{
+    background-color: #EF4135;
 }
 
-.bandeira-franca-branco{
-    background-color: white;
+/* bandeira da irlanda */
+
+.irlanda{
+    width: 33.333%;
+    height: 100%;
 }
 
-.bandeira-franca-vermelho{
-    background-color: red;
+.irlanda.verde{
+    background-color: #169B62;
+}
+.irlanda.branco{
+    background-color: #FFFFFF;
+}
+.irlanda.laranja{
+    background-color: #FF883E;
+}
+
+/* bandeira da argentina */
+.argentina{
+    width: 33.333%;
+    height: 100%;
+}
+
+.argentina.celeste{
+    background-color: #74ACDF;
+}
+.argentina.branco{
+    background-color: #FFFFFF;
 }
