--- a/devWebI/aula/flexbox/criando-bandeiras/style.css
+++ b/devWebI/aula/flexbox/criando-bandeiras/style.css
@@ -14,12 +14,6 @@ body{
    height: 400px; */
 }
 
-.container-virado {
-    display: flex;
-    width: 100vw;
-    height: 100%;
-}
-
 /* bandeira da frança */
 .franca{
     width: 33.333%;
@@ -54,9 +48,16 @@ body{
 }
 
 /* bandeira da argentina */
+.container-virado {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+}
+
 .argentina{
-    width: 33.333%;
-    height: 100%;
+    width: 100%;
+    height: 33.333%;
 }
 
 .argentina.celeste{
@@ -65,3 +66,4 @@ body{
 .argentina.branco{
     background-color: #FFFFFF;
 }
+
