--- a/devWebI/aula/flexbox/criando-bandeiras/style.css
+++ b/devWebI/aula/flexbox/criando-bandeiras/style.css
@@ -48,6 +48,13 @@ body{
 }
 
 /* bandeira da argentina */
+img {
+    width: 30%;
+    height: 30%;
+    display: block;
+    margin: auto;
+}
+
 .container-virado {
     display: flex;
     flex-direction: column;
