--- a/devWebI/aula/flexbox/criando-bandeiras/style.css
+++ b/devWebI/aula/flexbox/criando-bandeiras/style.css
@@ -80,3 +80,40 @@ img {
     width: 100%;
     height: 33.333%;
 }
+
+.israel.azul{
+    background-color: #005EB8;
+}
+.israel.branco{
+    background-color: #FFFFFF;
+}
+
+/* bandeira da dinamarca */
+
+.dinamarca{
+    width: 100%;
+    height: 33.333%;
+}
+.dinamarca.vermelho{
+    background-color: #C8102E;
+}
+.dinamarca.branco{
+    background-color: #FFFFFF;
+}
+.dinamarca.cross{
+    background-color: #FFFFFF;
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    left: 30%;
+}
+.dinamarca.cross.vertical{
+    width: 100%;
+    height: 20%;
+    top: 30%;
+}
+.dinamarca.cross.horizontal{
+    width: 100%;
+    height: 20%;
+    top: 30%;
+}
