--- a/devWebI/aula/flexbox/criando-bandeiras/style.css
+++ b/devWebI/aula/flexbox/criando-bandeiras/style.css
@@ -48,12 +48,6 @@ body{
 }
 
 /* bandeira da argentina */
-img {
-    width: 30%;
-    height: 30%;
-    display: block;
-    margin: auto;
-}
 
 .container-virado {
     display: flex;
@@ -72,6 +66,17 @@ img {
 }
 .argentina.branco{
     background-color: #FFFFFF;
+}
+
+.centraliza {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  
+.sol-argentina {
+    width: 100px;
+    height: auto;
 }
 
 /* bandeira da israel */
@@ -121,30 +126,77 @@ img {
 
 /* bandeira da dinamarca */
 
-.dinamarca{
+.dinamarca {
     width: 100%;
-    height: 33.333%;
+    height: 100vh;
+    background-color: #C8102E; /* vermelho da bandeira */
+    position: relative;
 }
-.dinamarca.vermelho{
-    background-color: #C8102E;
-}
-.dinamarca.branco{
-    background-color: #FFFFFF;
-}
-.dinamarca.cross{
-    background-color: #FFFFFF;
-    width: 20%;
-    height: 100%;
+  
+/* Barra vertical da cruz */
+.cruz-vertical {
     position: absolute;
-    left: 30%;
+    left: 25%; /* deslocada para a esquerda */
+    top: 0;
+    width: 10%; /* espessura da cruz */
+    height: 100%;
+    background-color: white;
 }
-.dinamarca.cross.vertical{
+  
+/* Barra horizontal da cruz */
+.cruz-horizontal {
+    position: absolute;
+    top: 45%; /* mais ou menos centralizado verticalmente */
+    left: 0;
     width: 100%;
-    height: 20%;
-    top: 30%;
+    height: 10%;
+    background-color: white;
 }
-.dinamarca.cross.horizontal{
+  
+/* bandeira da noroega */
+.noruega {
     width: 100%;
-    height: 20%;
-    top: 30%;
+    height: 100vh;
+    background-color: #BA0C2F; /* Vermelho da Noruega */
+    position: relative;
+}
+  
+/* FAIXAS BRANCAS */
+.cruz-vertical-branca {
+    position: absolute;
+    left: 25%;
+    top: 0;
+    width: 10%;
+    height: 100%;
+    background-color: white;
+}
+  
+.cruz-horizontal-branca {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    background-color: white;
+}
+  
+/* FAIXAS AZUIS */
+.cruz-vertical-azul {
+    position: absolute;
+    left: 25%;
+    top: 0;
+    width: 4%;
+    height: 100%;
+    background-color: #00205B; /* Azul escuro */
+    transform: translateX(-50%); /* centralizar na faixa branca */
+}
+  
+.cruz-horizontal-azul {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    width: 100%;
+    height: 4%;
+    background-color: #00205B;
+    transform: translateY(-50%);
 }
