--- a/devWebI/aula/flexbox/criando-bandeiras/style.css
+++ b/devWebI/aula/flexbox/criando-bandeiras/style.css
@@ -157,20 +157,32 @@ body{
 .noruega {
     width: 100%;
     height: 100vh;
-    background-color: #BA0C2F; /* Vermelho da Noruega */
+    background-color: #BA0C2F; /* vermelho */
     position: relative;
 }
   
-/* FAIXAS BRANCAS */
+/* === FAIXA BRANCA VERTICAL === */
 .cruz-vertical-branca {
     position: absolute;
-    left: 25%;
     top: 0;
+    left: 25%;
     width: 10%;
     height: 100%;
     background-color: white;
+  
+    /* Posicionar a faixa azul dentro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
   
+.cruz-vertical-azul {
+    width: 60%; /* 60% da faixa branca */
+    height: 100%;
+    background-color: #00205B;
+}
+  
+/* === FAIXA BRANCA HORIZONTAL === */
 .cruz-horizontal-branca {
     position: absolute;
     top: 45%;
@@ -178,25 +190,17 @@ body{
     width: 100%;
     height: 10%;
     background-color: white;
-}
   
-/* FAIXAS AZUIS */
-.cruz-vertical-azul {
-    position: absolute;
-    left: 25%;
-    top: 0;
-    width: 4%;
-    height: 100%;
-    background-color: #00205B; /* Azul escuro */
-    transform: translateX(-50%); /* centralizar na faixa branca */
+    /* Posicionar a faixa azul dentro */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
   
 .cruz-horizontal-azul {
-    position: absolute;
-    top: 45%;
-    left: 0;
+    height: 60%; /* 60% da faixa branca */
     width: 100%;
-    height: 4%;
     background-color: #00205B;
-    transform: translateY(-50%);
 }
+  
+  
