--- a/devWebI/aula/flexbox/criando-bandeiras/style.css
+++ b/devWebI/aula/flexbox/criando-bandeiras/style.css
@@ -133,7 +133,7 @@ body{
     height: 100vh;
 }
 
-.dinamarca.vermelho{
+/* .dinamarca.vermelho{
     background-color: #C8102E;
     width: 100%;
     height: 44%;
@@ -159,7 +159,7 @@ body{
     background-color: #C8102E;
     width: 62%;
     height: 100%;
-}
+} */
 
 
 /* .dinamarca {
@@ -190,15 +190,15 @@ body{
 } */
   
 /* bandeira da noroega */
-.noruega {
+/* .noruega {
     width: 100%;
     height: 100vh;
-    background-color: #BA0C2F; /* vermelho */
+    background-color: #BA0C2F; 
     position: relative;
-}
+} */
   
 /* === FAIXA BRANCA VERTICAL === */
-.cruz-vertical-branca {
+/* .cruz-vertical-branca {
     position: absolute;
     top: 0;
     left: 25%;
@@ -206,20 +206,19 @@ body{
     height: 100%;
     background-color: white;
   
-    /* Posicionar a faixa azul dentro */
     display: flex;
     justify-content: center;
     align-items: center;
 }
   
 .cruz-vertical-azul {
-    width: 60%; /* 60% da faixa branca */
+    width: 60%;
     height: 100%;
     background-color: #00205B;
-}
+} */
   
 /* === FAIXA BRANCA HORIZONTAL === */
-.cruz-horizontal-branca {
+/* .cruz-horizontal-branca {
     position: absolute;
     top: 45%;
     left: 0;
@@ -227,16 +226,15 @@ body{
     height: 10%;
     background-color: white;
   
-    /* Posicionar a faixa azul dentro */
     display: flex;
     justify-content: center;
     align-items: center;
 }
   
 .cruz-horizontal-azul {
-    height: 60%; /* 60% da faixa branca */
+    height: 60%; 
     width: 100%;
     background-color: #00205B;
-}
+} */
   
   
