--- a/devWebI/aula/flexbox/bandeira-texas/style.css
+++ b/devWebI/aula/flexbox/bandeira-texas/style.css
@@ -1,3 +1,12 @@
+
+*{
+    box-sizing: border-box;  
+}
+  
+body{
+    margin: 0;
+}
+
 .container{
     display: flex;
     flex-direction: row;
@@ -5,11 +14,27 @@
     height: 100vh;
 }
 
-.texas.vemelho{
+.texas.vermelho{
     background-color: #BF0A30;
+    width: 65%;
+    height: 100%;
 }
 
 .texas.azul{
     background-color: #002D72;
+    width: 35%;
+    height: 100%;
+}
+
+.p-branco{
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 50%;
+}
+
+.p-vermelho{
+    background-color: #BF0A30;
+    width: 100%;
+    height: 50%;
 }
 
