--- a/devWebI/aula/flexbox-layout/layout1/style.css
+++ b/devWebI/aula/flexbox-layout/layout1/style.css
@@ -43,23 +43,22 @@ body{
 .produtos {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
+    padding: 10px;
     max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 20px auto;
 }
 
 .linha {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     gap: 20px;
-    border: 2px solid red;
 }
 
 .card {
-    width: 320px;
-    height: 180px;
+    flex: 1 1 300px;         /* permite crescer mas respeita o mínimo */
+    max-width: 400px;        /* evita que fique largo demais */
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -73,7 +72,7 @@ body{
 
 .card img {
     width: 100%;
-    height: 120px;
+    height: 180px;
     object-fit: cover;
 }
 
