comentar regra de mídia para dispositivos menores

--- a/devWebI/aula/flexbox-layout/layout2/style.css
+++ b/devWebI/aula/flexbox-layout/layout2/style.css
@@ -80,7 +80,7 @@ body {
     height: 190px;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .noticias {
       flex-direction: column;
     }
@@ -90,4 +90,4 @@ body {
     .grande, .pequeno {
       width: 100%;
     }
-}
+} */
