--- a/devWebI/aula/flexbox-layout/layout4/style.css
+++ b/devWebI/aula/flexbox-layout/layout4/style.css
@@ -54,7 +54,7 @@ body{
     gap: 10px;
     padding: 10px;
     max-width: 1200px; 
-    border: 4px solid khaki;
+    /* border: 4px solid khaki; */
 
 }
 
@@ -67,7 +67,7 @@ body{
 }
 
 .banner, .lista {
-    flex: 1; 
+    flex: 1 1 300px; 
 }
 
 .banner {
