--- a/devWebI/aula/flexbox-layout/layout1/style.css
+++ b/devWebI/aula/flexbox-layout/layout1/style.css
@@ -40,43 +40,28 @@ body{
     font-size: 15px;
 }
 
-.produtos {
+.conteudo{
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
-    max-width: 1500px;
-    margin: 20px auto;
-}
-
-.linha {
-    display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+    margin: auto;
+    gap: 10px;
+    max-width: 1000px;
+    margin-top: 40px;
 }
 
-.card {
-    flex: 1 1 300px;         
-    max-width: 400px;        
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-    text-align: center;
+.item{
+    width: 320px;
+    height: auto;
 }
 
-.card img {
+.item img{
     width: 100%;
-    height: 180px;
-    object-fit: cover;
+    height: 150px;
 }
 
-.card p {
-    margin: 10px 0 0;
-    font-size: 16px;
+.item p{
+    width: 100%;
+    padding: 8px;
+    text-align: center;
 }
