ajusta a largura máxima da seção de conteúdo para melhorar a responsividade

--- a/devWebI/aula/flexbox-layout/layout4/style.css
+++ b/devWebI/aula/flexbox-layout/layout4/style.css
@@ -37,9 +37,9 @@
 .conteudo {
   display: flex;
   flex-direction: column;
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 40px auto;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   gap: 40px;
 }
 
