Implement code changes to enhance functionality and improve performance

--- a/devWebI/aula/flexbox-layout/consulta-atividade-layout/template/layout3.html
+++ b/devWebI/aula/flexbox-layout/consulta-atividade-layout/template/layout3.html
@@ -4,22 +4,46 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
   <title>Layout Flexbox</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
 
   <!-- TOPO com logo e menu -->
   <header class="topo">
-    <div class="logo">Logo</div>
+    <div class="logo">Logo 1</div>
     <nav class="menu">
       <a href="#">Sobre</a>
       <a href="#">Produtos</a>
       <a href="#">Contato</a>
     </nav>
+    <div class="logo">Logo 2</div>
   </header>
 
-  <main class="">
-
+  <main class="conteudo">
+    <section class="video">
+      <div class="item">
+        <div class="imagem-video"></div>
+        <div class="titulo">Vídeo</div>
+      </div>
+    </section>
+    <section class="lista-recomendacao">
+      <div class="recomendacao">
+        <div class="imagem-recomendacao"></div>
+        <div class="titulo">Recomendado 1</div>
+      </div>
+      <div class="recomendacao">
+        <div class="imagem-recomendacao"></div>
+        <div class="titulo">Recomendado 2</div>
+      </div>
+      <div class="recomendacao">
+        <div class="imagem-recomendacao"></div>
+        <div class="titulo">Recomendado 3</div>
+      </div>
+      <div class="recomendacao">
+        <div class="imagem-recomendacao"></div>
+        <div class="titulo">Recomendado 4</div>
+      </div>
+    </section>
   </main>
 
 </body>
