--- a/devWebI/atividade-componentes/src/css/style.css
+++ b/devWebI/atividade-componentes/src/css/style.css
@@ -102,3 +102,10 @@ h3, .navbar-brand {
   margin-right: 0;
   gap: 1rem; /* controla o espaçamento entre os cards */
 }
+
+.carousel-item img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 10px;
+}
