--- a/devWebI/atividade-componentes/src/css/style.css
+++ b/devWebI/atividade-componentes/src/css/style.css
@@ -103,9 +103,28 @@ h3, .navbar-brand {
   gap: 1rem; /* controla o espaçamento entre os cards */
 }
 
-.carousel-item img {
-  width: 100%;
-  height: 500px;
+/* Estilo para o carrossel de destaques (top filmes) */
+.carousel-inner img {
   object-fit: cover;
-  border-radius: 10px;
+  object-position: center; /* mostra o topo da imagem */
+  height: 400px; /* altura fixa */
+  width: 100%;
+  border-radius: 8px;
+}
+
+.carousel-caption {
+  bottom: 10%;
+  left: 5%;
+  text-align: left;
+}
+
+.carousel-caption h5 {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+}
+
+.carousel-caption p {
+  font-size: 1rem;
+  color: #f1f1f1;
 }
