--- a/devWebI/atividade-reproducao-pagina/src/css/style.css
+++ b/devWebI/atividade-reproducao-pagina/src/css/style.css
@@ -1,39 +1,16 @@
-body {
-  font-family: Arial, sans-serif;
-}
 
-a {
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
-  padding-left: 0;
-}
-[bold],
-.bold{
-  font-weight: bold;
-}
-
-.bg-red {
-  background-color: #c4170c !important;
-  color: white !important;
-}
-
-.bg-red a {
-  color: white;
-}
-.bg-light-gray{
-  background-color: #F3F3F3;
-  color: black;
-}
 
 nav .separator{
   margin: 0 5px;
 }
 
 nav a{
+  text-decoration: none;
   margin: 5px;
+}
+
+.header-title{
+  padding: 15px;
 }
 
 .acesso-rapido {
