--- a/devWebI/atividade-reproducao-pagina/src/css/style.css
+++ b/devWebI/atividade-reproducao-pagina/src/css/style.css
@@ -1,15 +1,4 @@
-
-
-nav .separator{
-  margin: 0 5px;
-}
-
-nav a{
-  text-decoration: none;
-  margin: 5px;
-}
-
-.header-title{
+.header-title {
   padding: 15px;
 }
 
@@ -18,13 +7,44 @@ nav a{
   border-bottom: 1px solid gray;
 }
 
-.acesso-rapido p{
-  padding: 10px;
+.acesso-rapido p {
   margin: 0;
-  margin-left: 100px;
 }
 
-.acesso-rapido ul li a{
+.acesso-rapido ul {
+  margin: 0px;
+}
+
+.acesso-rapido ul li a {
   color: #c4170c;
-  font-size: 20px;
+  font-weight: bold;
+  font-size: 16px;
+  margin: 10px;
+}
+
+.content-media__description {
+  margin-top: 16px;
+  font-family: Arial, Inter, -apple-system, "system-ui", Roboto, "Helvetica Neue", Helvetica, Noto, Ubuntu, "Segoe UI", sans-serif;
+  font-size: 12px;
+}
+
+.content-head__title {
+  font-feature-settings: initial;
+  font-size: 28px ;
+  font-variation-settings: var(--g-fnt-vr-dis-roman);
+  font-weight: 700;
+  letter-spacing: -.03em;
+  line-height: 32px;
+  -webkit-font-feature-settings: initial;
+  -moz-font-feature-settings: initial;
+}
+
+.content-head__subtitle {
+  font-feature-settings: initial;
+  font-size: 15px;
+  font-variation-settings: initial;
+  font-weight: 400;
+  line-height: 22px;
+  -webkit-font-feature-settings: initial;
+  -moz-font-feature-settings: initial;
 }
