--- a/devWebI/atividade-reproducao-pagina/src/css/style.css
+++ b/devWebI/atividade-reproducao-pagina/src/css/style.css
@@ -5,6 +5,7 @@
 .acesso-rapido {
   width: 100%;
   border-bottom: 1px solid gray;
+  margin-bottom: 40px;
 }
 
 .acesso-rapido p {
@@ -30,11 +31,11 @@
 
 .content-head__title {
   font-feature-settings: initial;
-  font-size: 28px ;
+  font-size: 40px ;
   font-variation-settings: var(--g-fnt-vr-dis-roman);
   font-weight: 700;
-  letter-spacing: -.03em;
-  line-height: 32px;
+  letter-spacing: -.045em;
+  line-height: 48px;
   -webkit-font-feature-settings: initial;
   -moz-font-feature-settings: initial;
 }
@@ -47,4 +48,16 @@
   line-height: 22px;
   -webkit-font-feature-settings: initial;
   -moz-font-feature-settings: initial;
+}
+
+.content-publication-data{
+  border-bottom: 1px solid gray;
+}
+
+.adware-container{
+  width: auto;
+}
+
+div.adware-container-info{
+  width: 60%;
 }
