--- a/devWebII/entrega0/src/main/webapp/css/style.css
+++ b/devWebII/entrega0/src/main/webapp/css/style.css
@@ -1,44 +1,40 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    display: flex;
+    padding: 0;
 }
+
 header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
+    background-color: #222;
+    color: #fff;
+    padding: 20px;
     text-align: center;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
 }
+
 aside {
-    width: 200px;
     background-color: #f4f4f4;
-    padding-top: 60px;
+    padding: 15px;
+    width: 200px;
+    float: left;
     height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    border-right: 1px solid #ccc;
+    box-sizing: border-box;
 }
+
 main {
-    margin-left: 200px;
-    padding: 80px 20px 20px 20px;
-    width: 100%;
+    margin-left: 220px;
+    padding: 20px;
 }
+
 table {
-    width: 100%;
     border-collapse: collapse;
+    width: 100%;
 }
+
 table, th, td {
     border: 1px solid #ccc;
 }
+
 th, td {
     padding: 10px;
     text-align: left;
-}
-form {
-    margin-bottom: 30px;
 }
